--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -2,7 +2,7 @@
 DeathMessage.Heat.0=overheated.
 DeathMessage.Heat.1=now knows what the Sun feels like.
 DeathMessage.Heat.2=was baconized.
-DeathMessage.Heat.3=was overwhelmed by extremely warm air atoms.
+DeathMessage.Heat.3=was overwhelmed by extremely warm air molecules.
 DeathMessage.Heat.4=suntanned for too long.
 DeathMessage.Heat.5=got sunbleached.
 DeathMessage.Heat.6=underwent incineration.
@@ -20,7 +20,7 @@ DeathMessage.Cold.4=was sent to the Ice Age.
 DeathMessage.Cold.5=had a visit with Mr. Freeze.
 DeathMessage.Cold.6=tried to preserve themselves.
 DeathMessage.Cold.7=succumbed to the Hypothermia.
-DeathMessage.Cold.8=attempted amateur cyrogenics.
+DeathMessage.Cold.8=attempted amateur cryogenics.
 DeathMessage.Cold.9=became a snowperson.
 DeathMessage.Cold.10=celebrated Christmas too hard.
 
