--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -59,6 +59,8 @@ ItemTooltip.VolatileThermometer=Releases a large explosion from either extreme h
 #Unique Vanilla Set Bonus Tooltips (Pre-Hardmode)
 GlobalSetBonus.RainArmor=5 degree increase critical range while raining
 GlobalSetBonus.ObsidianArmor=Grants the effect of the Obsidian Rose
+GlobalSetBonus.ShadowArmor=Negates the temperature change resistance of the Corruption
+GlobalSetBonus.AncientShadowArmor={$Mods.TerraTemp.GlobalSetBonus.ShadowArmor}
 GlobalSetBonus.CrimsonArmor=Negates the humidity of the Crimson
 GlobalSetBonus.JungleArmor=Negates the humidity of the Jungle
 GlobalSetBonus.MeteorArmor=Negates the cold of Space
