--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -59,6 +59,7 @@ ItemTooltip.VolatileThermometer=Releases a large explosion from either extreme h
 #Unique Vanilla Set Bonus Tooltips (Pre-Hardmode)
 GlobalSetBonus.RainArmor=5 degree increase critical range while raining
 GlobalSetBonus.FossilArmor=Negates the heat of the Desert
+GlobalSetBonus.BeeArmor=50% increased temperature change resistance while under the effects of the Honey buff
 GlobalSetBonus.ObsidianArmor=Grants the effect of the Obsidian Rose
 GlobalSetBonus.ShadowArmor=Negates the temperature change resistance of the Corruption
 GlobalSetBonus.AncientShadowArmor={$Mods.TerraTemp.GlobalSetBonus.ShadowArmor}
