--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -74,6 +74,7 @@ GlobalSetBonus.AncientShadowArmor={$Mods.TerraTemp.GlobalSetBonus.ShadowArmor}
 GlobalSetBonus.CrimsonArmor=Negates the humidity of the Crimson
 
 #Unique Vanilla Set Bonus Tooltips (Hardmode)
+GlobalSetBonus.SpiderArmor=All attacks inflict Venom while body temperature is above your heat comfortability range
 GlobalSetBonus.ShroomiteArmor=80% increased temperature change resistance while in stealth
 GlobalSetBonus.SpectreArmor=Gain up to 80% increased temperature change resistance as mana decreases
 GlobalSetBonus.TurtleArmor=Gain up to 80% increased temperature change resistance as life lowers
