--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -84,3 +84,4 @@ GlobalSetBonus.TurtleArmor=Gain up to 80% increased temperature change resistanc
 GlobalSetBonus.SolarFlareArmor=5% increased life regeneration for each degree above your heat comfortability range\nGrants immunity to Sweaty & Heat Stroke
 GlobalSetBonus.VortexArmor=95% increased temperature change resistance while in stealth
 GlobalSetBonus.NebulaArmor=2 defense increase for each degree below your cold comfortability range\nGrants immunity to Shivering & Hypothermia
+GlobalSetBonus.StardustArmor=8 degree increased body temperature at night
