Chlorophyte Armor Change

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -78,6 +78,7 @@ GlobalSetBonus.SpiderArmor=All attacks inflict Venom while body temperature is a
 GlobalSetBonus.CobaltArmor=3% increased damage for each degree above your heat comfortability range
 GlobalSetBonus.PalladiumArmor=12 degree increased global comfortability range while under the effects of the Rapid Healing buff
 GlobalSetBonus.OrichalcumArmor=1 degree increased critical range for each active buff or debuff
+GlobalSetBonus.ChlorophyteArmor=Your highest crit chance is converted into temperature change resistance
 GlobalSetBonus.ShroomiteArmor=80% increased temperature change resistance while in stealth
 GlobalSetBonus.SpectreArmor=Gain up to 80% increased temperature change resistance as mana decreases
 GlobalSetBonus.TurtleArmor=Gain up to 80% increased temperature change resistance as life lowers
