Optimize localization with Regex

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -57,15 +57,15 @@ ItemName.VolatileThermometer=Volatile Thermometer
 ItemTooltip.VolatileThermometer=Releases a large explosion from either extreme heat or cold upon death
 
 #Unique Vanilla Set Bonus Tooltips (Pre-Hardmode)
-GlobalSetBonus.RainArmor=5 degree increase critical range while raining
+GlobalSetBonus.RainArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedCriticalRange] (5)} while it's raining
 GlobalSetBonus.AnglerArmor=33% of your fishing power is converted to temperature change resistance
 GlobalSetBonus.CactusArmor=25% decreased heat of the Desert
-GlobalSetBonus.PumpkinArmor=5 degree increased cold comfortability range while Well Fed
-GlobalSetBonus.NinjaArmor=25% increased temperature change resistance during the night
+GlobalSetBonus.PumpkinArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedColdComfortability] (5)} while Well Fed
+GlobalSetBonus.NinjaArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (25)} during the night
 GlobalSetBonus.FossilArmor=Negates the heat of the Desert
-GlobalSetBonus.BeeArmor=50% increased temperature change resistance while under the effects of the Honey buff
+GlobalSetBonus.BeeArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (50)} while under the effects of the Honey buff
 GlobalSetBonus.ObsidianArmor=Grants the effect of the Obsidian Rose
-GlobalSetBonus.GladiatorArmor=Gain up to 34% increased temperature change resistance as life lowers
+GlobalSetBonus.GladiatorArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (34)} as life lowers
 GlobalSetBonus.MeteorArmor=Negates the cold of Space
 GlobalSetBonus.JungleArmor=Negates the humidity of the Jungle
 GlobalSetBonus.AncientCobaltArmor={$Mods.TerraTemp.GlobalSetBonus.JungleArmor}
@@ -76,14 +76,14 @@ GlobalSetBonus.CrimsonArmor=Negates the humidity of the Crimson
 #Unique Vanilla Set Bonus Tooltips (Hardmode)
 GlobalSetBonus.SpiderArmor=All attacks inflict Venom while body temperature is above your heat comfortability range
 GlobalSetBonus.CobaltArmor=3% increased damage for each degree above your heat comfortability range
-GlobalSetBonus.PalladiumArmor=12 degree increased global comfortability range while under the effects of the Rapid Healing buff
-GlobalSetBonus.MythrilArmor=Taking damage temporarily increases your temperature change resistance by 40%
-GlobalSetBonus.OrichalcumArmor=1 degree increased critical range for each active buff or debuff
+GlobalSetBonus.PalladiumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedGlobalComfortability] (12)} while under the effects of the Rapid Healing buff
+GlobalSetBonus.MythrilArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (40)} for a short time after taking damage
+GlobalSetBonus.OrichalcumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedCriticalRange] (1)} for each active buff or debuff
 GlobalSetBonus.ChlorophyteArmor=Your highest crit chance is converted into temperature change resistance
-GlobalSetBonus.ShroomiteArmor=80% increased temperature change resistance while in stealth
-GlobalSetBonus.SpectreArmor=Gain up to 80% increased temperature change resistance as mana decreases
-GlobalSetBonus.TurtleArmor=Gain up to 80% increased temperature change resistance as life lowers
+GlobalSetBonus.ShroomiteArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} while in stealth
+GlobalSetBonus.SpectreArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as mana decreases
+GlobalSetBonus.TurtleArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as life lowers
 GlobalSetBonus.SolarFlareArmor=5% increased life regeneration for each degree above your heat comfortability range\nGrants immunity to Sweaty & Heat Stroke
-GlobalSetBonus.VortexArmor=95% increased temperature change resistance while in stealth
+GlobalSetBonus.VortexArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (95)} while in stealth
 GlobalSetBonus.NebulaArmor=2 defense increase for each degree below your cold comfortability range\nGrants immunity to Shivering & Hypothermia
-GlobalSetBonus.StardustArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedDesiredTemp] (8)} at night
+GlobalSetBonus.StardustArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedDesiredTemp] (8)} during the night
