Frost Armor Changes

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -81,6 +81,7 @@ GlobalSetBonus.MythrilArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistan
 GlobalSetBonus.OrichalcumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedCriticalRange] (1)} for each active buff or debuff
 GlobalSetBonus.AdamantiteArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (67)} based on how fast you are moving
 GlobalSetBonus.TitaniumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedColdComfortability] (8)} while under the effects of the Shadow Dodge buff
+GlobalSetBonus.FrostArmor=Grants the effects of the Frost Rune
 GlobalSetBonus.ChlorophyteArmor=Your highest crit chance is converted into temperature change resistance
 GlobalSetBonus.ShroomiteArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} while in stealth
 GlobalSetBonus.SpectreArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as mana decreases
