Forbidden Armor Changes

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -82,6 +82,7 @@ GlobalSetBonus.OrichalcumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedCriticalR
 GlobalSetBonus.AdamantiteArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (67)} based on how fast you are moving
 GlobalSetBonus.TitaniumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedColdComfortability] (8)} while under the effects of the Shadow Dodge buff
 GlobalSetBonus.FrostArmor=Grants the effects of the Frost Rune
+GlobalSetBonus.ForbiddenArmor=Grants the effects of the Flame Rune
 GlobalSetBonus.ChlorophyteArmor=Your highest crit chance is converted into temperature change resistance
 GlobalSetBonus.ShroomiteArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} while in stealth
 GlobalSetBonus.SpectreArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as mana decreases
