DD2 Armor Changes

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -83,13 +83,21 @@ GlobalSetBonus.AdamantiteArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.Increas
 GlobalSetBonus.TitaniumArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedColdComfortability] (8)} while under the effects of the Shadow Dodge buff
 GlobalSetBonus.FrostArmor=Grants the effects of the Frost Rune
 GlobalSetBonus.ForbiddenArmor=Grants the effects of the Flame Rune
+GlobalSetBonus.SquireArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (67)} while protecting the Eternia Crystal
+GlobalSetBonus.MonkArmor={$Mods.TerraTemp.GlobalSetBonus.SquireArmor}
+GlobalSetBonus.HuntressArmor={$Mods.TerraTemp.GlobalSetBonus.SquireArmor}
+GlobalSetBonus.ApprenticeArmor={$Mods.TerraTemp.GlobalSetBonus.SquireArmor}
 GlobalSetBonus.ChlorophyteArmor=Your highest crit chance is converted into temperature change resistance
-GlobalSetBonus.ShroomiteArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} while in stealth
-GlobalSetBonus.SpectreArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as mana decreases
 GlobalSetBonus.TurtleArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as life lowers
 GlobalSetBonus.TikiArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (7.5)} for each active minion
 GlobalSetBonus.BeetleDefenseArmor=50% of your defense is added to your temperature change resistance
 GlobalSetBonus.BeetleOffenseArmor=50% of your melee critical strike chance is added to your temperature change resistance
+GlobalSetBonus.ShroomiteArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} while in stealth
+GlobalSetBonus.SpectreArmor=Gain up to {[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (80)} as mana decreases
+GlobalSetBonus.ValhallaKnightArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (85)} while protecting the Eternia Crystal
+GlobalSetBonus.ShinobiInfiltratorArmor={$Mods.TerraTemp.GlobalSetBonus.ValhallaKnightArmor}
+GlobalSetBonus.RedRidingArmor={$Mods.TerraTemp.GlobalSetBonus.ValhallaKnightArmor}
+GlobalSetBonus.DarkArtistArmor={$Mods.TerraTemp.GlobalSetBonus.ValhallaKnightArmor}
 GlobalSetBonus.SolarFlareArmor=5% increased life regeneration for each degree above your heat comfortability range\nGrants immunity to Sweaty & Heat Stroke
 GlobalSetBonus.VortexArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedTempResistance] (95)} while in stealth
 GlobalSetBonus.NebulaArmor=2 defense increase for each degree below your cold comfortability range\nGrants immunity to Shivering & Hypothermia
