--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -56,6 +56,9 @@ ItemTooltip.HeterostaticRune=2% increased damage and movement speed for each deg
 ItemName.VolatileThermometer=Volatile Thermometer
 ItemTooltip.VolatileThermometer=Releases a large explosion from either extreme heat or cold upon death
 
+ItemName.RiskBadge=Risk Badge
+ItemTooltip.RiskBadge=Forcibly sets your temperature change resistance to -100%\n34% increased damage reduction
+
 #TerraTemp Buff Names/Tooltips
 BuffName.CoolingPotionBuff=Cooled
 
