--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -49,8 +49,10 @@ GlobalTooltip.DecreasedCriticalRange={0} degree decreased critical range
 GlobalTooltip.IncreasedClimateExtremity={0}% increased climate temperatures
 GlobalTooltip.DecreasedClimateExtremity={0}% decreased climate temperatures
 
-GlobalTooltip.IncreasedSunExtremity={0}% increased sun protection
-GlobalTooltip.DecreasedSunExtremity={0}% decreased sun protection
+GlobalTooltip.IncreasedSunExtremity={0}% decreased protection against the sun
+GlobalTooltip.DecreasedSunExtremity={0}% increased protection against the sun
+
+GlobalTooltip.WhileHeld=While holding this,
 
 #TerraTemp Accessory Names/Tooltips
 ItemName.FlameRune=Flame Rune
@@ -99,6 +101,9 @@ BuffDescription.Hypothermia=Feeling numb, the end feels near
 #Unique Item Change Tooltips
 GlobalItemChange.ObsidianSkull=40% decreased heat of the Underworld
 GlobalItemChange.ObsidianRose=Negates the temperature increase of touching and being near lava
+
+#Unique Item Holdout Change Tooltips
+
 
 #Unique Vanilla Set Bonus Tooltips (Pre-Hardmode)
 GlobalSetBonus.RainArmor={[Mods.TerraTemp.GlobalTooltip.IncreasedCriticalRange] (5)} while it's raining
