Fixed Tome Localization

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -110,10 +110,10 @@ ItemName.CoolingPotion=Cooling Potion
 
 #TerraTemp Tome Items/Tooltips
 ItemName.FlameTome=Flame Tome
-ItemTooltip.FlameTome=Can be bound to any non-vanilla armor piece at a binding station\nIncreases cold comfortability by 1 degree for each tome level
+ItemTooltip.FlameTome=Can be bound to any non-vanilla armor piece at an enchanted bookshelf\nIncreases heat comfortability by 1 degree for each tome level
 
 ItemName.FrostTome=Frost Tome
-ItemTooltip.FrostTome=Can be bound to any non-vanilla armor piece at a binding station\nIncreases heat comfortability by 1 degree for each tome level
+ItemTooltip.FrostTome=Can be bound to any non-vanilla armor piece at an enchanted bookshelf\nIncreases cold comfortability by 1 degree for each tome level
 
 #TerraTemp Buff Names/Tooltips
 BuffName.CoolingPotionBuff=Cooled
