Localized Tome Level Tooltip

--- a/Localization/en-US.lang
+++ b/Localization/en-US.lang
@@ -152,6 +152,7 @@ UIInfo.SuccessfulBind=Bound!
 #TerraTemp Miscellaneous Keys
 MiscKeys.FlameEnchantment=Flame Protection
 MiscKeys.FrostEnchantment=Frost Protection
+MiscKeys.EnchantmentLevel=Level {0}
 
 #Unique Item Holdout Change Tooltips
 
